2011-11-08  Ulrich Drepper  <drepper@gmail.com>

	* locale/findlocale.c (_nl_find_locale): Use __strcasecmp_l.
	* intl/localealias.c (strcasecmp): Define using __strcasecmp_l.

	* sysdeps/i386/i686/multiarch/strcmp-ssse3.S: Remove unnecessary
	instructions.

2011-11-07  Andreas Schwab  <schwab@redhat.com>

	* libio/genops.c (_IO_flush_all_lockp): Only register cleanup
	handler when locking.

	* nss/nss_files/files-initgroups.c (_nss_files_initgroups_dyn):
	Fix size of allocated buffer.

2011-11-04  Andreas Schwab  <schwab@redhat.com>

	[BZ #10103]
	* math/math.h [__NO_LONG_DOUBLE_MATH && !_LIBC]: Provide
	declarations for long double functions.
	* math/complex.h [__NO_LONG_DOUBLE_MATH && !_LIBC]: Likewise.

	* elf/sprof.c (load_shobj): Fix off-by-one when reading link name.

2011-11-03  Andreas Schwab  <schwab@redhat.com>

	* nscd/nscd.c (main): Don't start AVC thread until credentials are
	installed.

	* nss/makedb.c (set_file_creation_context): Do nothing if SELinux
	is disabled.

2011-11-02  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* bits/ioctl-types.h (_IOT_sgttyb): Set number of chars to 4.

2011-11-01  Andreas Schwab  <schwab@linux-m68k.org>

	* include/alloca.h (stackinfo_alloca_round): Define.
	(extend_alloca): Use it.
	[_STACK_GROWS_UP]: Correct check for adjacent allocation.
	* elf/dl-deps.c (_dl_map_object_deps): Don't round alloca size
	here.

	* scripts/check-local-headers.sh: Ignore libaudit.h.

	* nscd/Makefile (extra-objs): Make recursively expanded.

2011-11-01  Ulrich Drepper  <drepper@gmail.com>

	* sysdeps/x86_64/strcmp.S: Fix test for non-ASCII locales.
	* sysdeps/x86_64/multiarch/strcmp-sse42.S: Likewise.

	* posix/tst-rfc3484.c: Add missing __free_in6ai dummy function.
	* posix/tst-rfc3484-2.c: Likewise.
	* posix/tst-rfc3484-3.c: Likewise.

	* sysdeps/unix/sysv/linux/bits/uio.h: Declare process_vm_readv and
	process_vm_writev.
	* sysdeps/unix/sysv/linux/syscalls.list: Add process_vm_readv and
	process_vm_writev.